[gd_scene load_steps=9 format=3 uid="uid://b72wmgdc3j58c"]

[ext_resource type="Script" path="res://player.gd" id="1_tfycn"]
[ext_resource type="Shader" path="res://chroma_key_shader.gdshader" id="2_3rxau"]
[ext_resource type="PackedScene" uid="uid://bakh7m4gc2j1f" path="res://bullet.tscn" id="2_5ahxx"]
[ext_resource type="VideoStream" path="res://default_dance.ogv" id="3_13we3"]
[ext_resource type="AudioStream" uid="uid://me4tkmtj4lrj" path="res://vine_boom.mp3" id="4_lad5s"]
[ext_resource type="Texture2D" uid="uid://r4m7jptxy2ge" path="res://player_assult_rifle.png" id="5_cirke"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_grci5"]
radius = 14.0
height = 72.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nmyi8"]
shader = ExtResource("2_3rxau")

[node name="player" type="CharacterBody2D"]
collision_mask = 7
script = ExtResource("1_tfycn")
bullet = ExtResource("2_5ahxx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_grci5")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
material = SubResource("ShaderMaterial_nmyi8")
offset_left = -960.0
offset_top = -544.0
offset_right = 960.0
offset_bottom = 544.0
scale = Vector2(0.1, 0.1)
pivot_offset = Vector2(960, 544)
stream = ExtResource("3_13we3")
autoplay = true
loop = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_lad5s")
volume_db = -10.0

[node name="invulnerable_timer" type="Timer" parent="."]

[node name="player_assault_rifle" type="Sprite2D" parent="."]
position = Vector2(0, -10)
scale = Vector2(0.07, 0.07)
texture = ExtResource("5_cirke")

[connection signal="timeout" from="invulnerable_timer" to="." method="_on_invulnerable_timer_timeout"]
